# Patter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  skills-lock.json
.claude/agents/: demo-prep.md  hackathon-shipcall.md  hackathon-voicescope.md  rapid-debug.md
.claude/commands/: demo-record.md  hackathon-status.md  quick-fix.md  test-call.md
.claude/rules/: agents.md  hackathon-mode.md  hackathon-strategy.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  branch-cleanup.yml  docs-feature-drift.yml  notebooks.yml  release.yml  test.yml
.hackathon/: 00-context.md  01-hackathon-overview.md  02-google-ai-studio-prereq.md  03-fastshot-prereq.md  04-leo-prototype-ideas.md  05-submission-prep.md  06-hackathon-day-strategy.md  07-pitch-outline.md  08-one-pager-draft.md  09-video-scripts.md  2026-04-12-design-hackathon-ideas.md  2026-04-12-office-hours-design.md  2026-04-12-platform-research.md  README.md
.hackathon/shipcall/: .env.example  CLAUDE.md  README.md  app.py  demo.py  fastshot-notes.md  requirements.txt
.hackathon/voicescope/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  app.py  cloudbuild.yaml  demo.py  deploy.sh  index.html  requirements.txt
docs/: .mintignore  2026-04-11-PLAN-build-test-suite.md  COMPETITIVE_ANALYSIS.md  DEVLOG.md  api-reference.md  architecture.md  concepts.mdx  docs.json  getting-started.md  introduction.mdx  mint.json  observability.md  python-sdk.md  quickstart.mdx  self-hosting.md  typescript-sdk.md  voice-modes.md  voice-modes.mdx
docs/api-reference/: accounts.mdx  agents.mdx  authentication.mdx  billing.mdx  calls.mdx  overview.mdx  phone-numbers.mdx  websocket.mdx
docs/dev-tools/: dashboard.mdx  mcp.mdx  tunneling.mdx
docs/examples/: basic-inbound.py  basic-inbound.ts  basic-outbound.py  basic-outbound.ts  call-transfer.py  call-transfer.ts  conversation-history.py  conversation-history.ts  custom-voice.py  custom-voice.ts  dynamic-variables.py  dynamic-variables.ts  guardrails.mdx  (+13 more)
examples/: README.md
examples/notebooks/python/: 01_quickstart.ipynb  02_realtime.ipynb  03_pipeline_stt.ipynb  04_pipeline_tts.ipynb  05_pipeline_llm.ipynb  06_telephony_twilio.ipynb  07_telephony_telnyx.ipynb  08_tools.ipynb  09_guardrails_hooks.ipynb  10_advanced.ipynb  11_metrics_dashboard.ipynb  12_security.ipynb  Dockerfile  _setup.py  docker-compose.yml  pyproject.toml  requirements.txt
examples/notebooks/python/tests/: __init__.py  conftest.py  test_docker_bootstrap.py  test_setup.py
scripts/: appendix_cells_01.py  appendix_cells_02.py  appendix_cells_03.py  appendix_cells_04.py  appendix_cells_05.py  appendix_cells_06.py  appendix_cells_07.py  appendix_cells_08.py  appendix_cells_09.py  appendix_cells_10.py  appendix_cells_11.py  appendix_cells_12.py  check_feature_docs_drift.py  check_notebook_parity.py  generate_notebook_fixtures.py  inject_feature_tour.py  inject_live_appendix.py  inject_quickstart.py  inject_section.py  pr-validate.sh  quickstart_cells.py  run_all_notebooks.sh  scaffold_all_notebooks.sh  scaffold_notebook.py  scan_notebook_secrets.py  section_cells_01.py  section_cells_02.py  section_cells_03.py  section_cells_04.py  section_cells_05.py  section_cells_06.py  section_cells_07.py  section_cells_08.py  section_cells_09.py  section_cells_10.py  section_cells_11.py  section_cells_12.py  test_check_notebook_parity.py  test_generate_notebook_fixtures.py  test_inject_section.py  (+2 more)
sdk/: README.md  pyproject.toml
sdk-py/: README.md  pyproject.toml
sdk-ts/: README.md  package-lock.json  package.json  playwright.config.ts  tsup.config.ts  vitest.config.ts
sdk/patter/: __init__.py  banner.py  cli.py  client.py  connection.py  local_config.py  models.py  scheduler.py  server.py
sdk/patter/dashboard/: __init__.py  auth.py  persistence.py  routes.py  ui.py
sdk/patter/evals/: case.py  runner.py
sdk/patter/handlers/: stream_handler.py  telnyx_handler.py  twilio_handler.py
sdk/patter/providers/: __init__.py  base.py  cartesia_stt.py  cerebras_llm.py  deepfilternet_filter.py  deepgram_stt.py  elevenlabs_convai.py  elevenlabs_tts.py  gemini_live.py  groq_llm.py  krisp_filter.py  openai_realtime.py  openai_tts.py  silero_onnx.py  silero_vad.py  soniox_stt.py  speechmatics_stt.py  telnyx_adapter.py  telnyx_tts.py  whisper_stt.py
sdk/patter/resources/: __init__.py
sdk/patter/resources/audio/: __init__.py
sdk/patter/services/: background_audio.py  call_orchestrator.py  fallback_provider.py  ivr.py  llm_loop.py  metrics.py  pipeline_hooks.py  remote_message.py  sentence_chunker.py  session_manager.py  tool_executor.py  transcoding.py
sdk/tests/: conftest.py  test_agent_model.py  test_client.py  test_connection.py  test_cost_tracking.py  test_dashboard.py  test_dashboard_auth.py  test_dashboard_export.py  test_gemini_live.py  test_ivr.py  test_llm_providers_vendor.py  test_local_mode.py  test_models.py  test_new_features.py  test_observability_tracing.py  test_pricing.py  test_providers.py  test_providers_standalone.py  test_remote_message.py  test_server.py  test_telnyx_providers.py  test_tool_executor.py  test_tts_cartesia_rime_lmnt.py  test_ultravox_realtime.py  test_validation_guardrails.py
sdk/tests/integration/: test_assemblyai_stt.py  test_cartesia_stt.py  test_evals_integration.py  test_twilio_convai.py  test_twilio_realtime.py
sdk/tests/soak/: test_soak.py
sdk/tests/unit/: test_assemblyai_stt.py  test_background_audio.py  test_cartesia_stt.py  test_client_unit.py  test_coverage_boost.py  test_deepfilternet_filter.py  test_fallback_provider.py  test_krisp_filter.py  test_metrics_unit.py  test_models_unit.py  test_pipeline_hooks.py  test_providers_io_unit.py  test_providers_unit.py  test_server_unit.py  test_silero_vad.py  test_soniox_speechmatics_unit.py  test_stream_handler_unit.py  test_telnyx_handler_unit.py  test_text_transforms.py  test_tool_decorator.py
(+661 files in other folders)
