[project]
name = "patter"
version = "0.3.0"
description = "Connect AI agents to phone numbers with 10 lines of code"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nicolò Tognoni", email = "nicolo@patter.dev" },
]
keywords = ["voice", "ai", "phone", "telephony", "speech", "tts", "stt", "twilio", "telnyx", "openai", "elevenlabs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://patter.dev"
Documentation = "https://docs.patter.dev"
Repository = "https://github.com/nicolotognoni/patter"
"Bug Tracker" = "https://github.com/nicolotognoni/patter/issues"

[project.optional-dependencies]
local = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "twilio>=9.0.0",
    "audioop-lts>=0.2.1; python_version>='3.13'",
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["patter*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
