[project]
name = "getpatter"
version = "0.4.0"
description = "Connect AI agents to phone numbers in 4 lines of code"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "PatterAI", email = "hello@getpatter.com" },
]
keywords = ["voice", "ai", "phone", "telephony", "speech", "tts", "stt", "twilio", "telnyx", "openai", "elevenlabs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.scripts]
patter = "patter.cli:main"

[project.urls]
Homepage = "https://www.getpatter.com"
Documentation = "https://docs.getpatter.com"
Repository = "https://github.com/PatterAI/Patter"
"Bug Tracker" = "https://github.com/PatterAI/Patter/issues"

[project.optional-dependencies]
local = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "twilio>=9.0.0",
    "audioop-lts>=0.2.1; python_version>='3.13'",
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["patter*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/soak"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "soak: Soak/stress tests (slow)",
    "security: Security tests",
]
