[project]
name = "patter-notebooks-python"
version = "0.0.0"
description = "Internal helpers + tests for the Patter Python notebook tutorial series."
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29",
    "ipython>=8.0",
    "nbclient>=0.10",
    "jupyter-client>=8.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "twilio>=9.0",
    "telnyx>=2.0",
    "pyngrok>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "nbstripout>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
